# git-repo-eol-analyzer

./: .clangd  .gitattributes  .gitignore  .pre-commit-config copy.yaml.old  .pre-commit-config.yaml  .pre-commit.yaml  CMakeLists.txt  GitHook.md  PRUEBA2.BAT  README.md  UnitTests.md  prueba-mac.bat  prueba.bat  prueba3.bat
doc/: GitHook.md
pre-commit/: run-tests-multiplatform.py  run-tests-multiplatform.sh  run-tests.cmd  run-tests.ps1  run-tests.sh
src/: eol_analyzer.cpp  eol_analyzer.h  main.cpp
test/: test.CRLF.LF.test  test.LF.CR.test  test.LF.txt.test  test.oneline.CR.test
test_files/: test_CRLF_CR.test  test_CRLF_LF_CR.test  test_only_LF.test
tests/: test_main.cpp
